--- a/public/index.html
+++ b/public/index.html
@@ -332,7 +332,7 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>Sudipta Saha is a PhD candidate in Biostatistics at the University of Toronto. His research interests include causal inference, survival analysis and predictive modeling. He also works as a research assistant in the breast cancer research unit at the Princies Margaret Hospital (PMH), where he works with researchers to identify risk factors for breast cancer.</p>
+<p>Sudipta Saha is a PhD candidate in Biostatistics at the University of Toronto. His research interests include causal inference, survival analysis and predictive modeling. He also works as a research assistant in the breast cancer research unit at the Princess Margaret Hospital (PMH), where he works with researchers to identify risk factors for breast cancer.</p>
 
 
     <div class="row">
