--- a/404.html
+++ b/404.html
@@ -86,8 +86,8 @@
   
 
   
-  <link rel="alternate" href="https://sahasud1.github.io/index.xml" type="application/rss+xml" title="Sudipta Saha">
-  <link rel="feed" href="https://sahasud1.github.io/index.xml" type="application/rss+xml" title="Sudipta Saha">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Sudipta Saha">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Sudipta Saha">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -276,11 +276,11 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="https://sahasud1.github.io/publication/clothing-search/">A Comparative Analysis on Computational Methods for Fitting an Exponential Random Graph Model (ERGM) to Biological Network Data</a></li>
+    <li><a href="/publication/clothing-search/">A Comparative Analysis on Computational Methods for Fitting an Exponential Random Graph Model (ERGM) to Biological Network Data</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://sahasud1.github.io/publication/person-re-identification/"> Network motif identification and structure detection with graphical models</a></li>
+    <li><a href="/publication/person-re-identification/"> Network motif identification and structure detection with graphical models</a></li>
   </ul>
   
   
@@ -290,7 +290,7 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="https://sahasud1.github.io/talk/example-talk/">SSC talk</a></li>
+    <li><a href="/talk/example-talk/">SSC talk</a></li>
   </ul>
   
   
@@ -300,11 +300,11 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="https://sahasud1.github.io/project/deep-learning/">Breast feeding survalance project</a></li>
+    <li><a href="/project/deep-learning/">Breast feeding survalance project</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://sahasud1.github.io/project/example-external-project/">Other Project</a></li>
+    <li><a href="/project/example-external-project/">Other Project</a></li>
   </ul>
   
   
@@ -315,7 +315,7 @@
 
     
     <p class="powered-by">
-      <a href="https://sahasud1.github.io/privacy/">Privacy Policy</a>
+      <a href="/privacy/">Privacy Policy</a>
     </p>
     
 
